# decaysim

./: CITATION.cff  README.md  requirements.txt  setup.cfg  simparams.toml  simparams_72br.toml  simparams_72ge.toml  simparams_98mo.toml
decaysim/: __main__.py  version.py
